feat: Update login and registration pages with improved button states and routing

--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -1,6 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import LoginForm from "../components/login/loginForm";
+import LoginForm from "../../components/login/loginForm";
+import Layout from "../../layouts/Layout.astro";
+
 ---
 <Layout>
 	<a
