--- a/src/pages/login/register-user.astro
+++ b/src/pages/login/register-user.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import RegisterUserForm from "../components/login/registerUserForm";
+import RegisterUserForm from "../../components/login/registerUserForm";
+import Layout from "../../layouts/Layout.astro";
 ---
 <Layout>
 	<a
