feat: Implement AuthProtector component for route access control and add unauthorized page

--- a/src/pages/profile/index.astro
+++ b/src/pages/profile/index.astro
@@ -1,7 +1,10 @@
 ---
-import ProfileView from '../../components/profile/profileView.tsx';
-import Layout from '../../layouts/Layout.astro';
+import AuthProtector from "../../components/login/AuthProtector ";
+import ProfileView from "../../components/profile/profileView.tsx";
+import Layout from "../../layouts/Layout.astro";
 ---
+
 <Layout>
+  <AuthProtector client:load allowedRoles={["administrador", "cliente"]} />
   <ProfileView client:only="react" />
 </Layout>
